--- a/src/views/event.ejs
+++ b/src/views/event.ejs
@@ -11,7 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <body>
-    <h1 style="text-align: center;" class="m-5">Hello, <%= user %>
+    <h1 style="text-align: center;" class="m-5">Hello,
+        <%= user %>
     </h1>
     <div class="container mt-3">
         <h2 style="color: red;">Event Table</h2>
@@ -85,7 +86,7 @@
 
 <!-- MARK EDITING EVENT -->
 <script>
-    const BASE_URL = 'http://localhost:3000/event';
+    const BASE_URL = 'http://localhost:3000/events';
 
     async function markEditing(eventID) {
         try {
@@ -93,7 +94,7 @@
             const response = await axios.post(`${BASE_URL}/${eventID}/editable/me`);
 
             if (response.status === 200) {
-                // Edit page API
+                // OPEN Edit page API
                 const eventModalResponse = await axios.get(`${BASE_URL}/${eventID}/edit`);
                 const result = eventModalResponse.data.event;
 
@@ -104,24 +105,27 @@
                 const editEventModal = new bootstrap.Modal(document.getElementById('editEventModal'));
                 editEventModal.show();
 
+                alert("HELLO")
+
                 // Maintain API
                 await axios.post(`${BASE_URL}/${eventID}/editable/maintain`);
                 alert("Công thêm thời gian thành công")
 
                 // Release API
                 const editEventModalElement = document.getElementById('editEventModal');
+
                 editEventModalElement.addEventListener('hidden.bs.modal', async function () {
                     try {
                         const releaseResponse = await axios.post(`${BASE_URL}/${eventID}/editable/release`);
-                        console.log('releaseResponse:', releaseResponse);
+
                         if (releaseResponse.status === 200) {
+                            alert("Release edit event success")
                             window.location.reload();
                         } else {
                             alert('Failed to release editing:', error.message || error);
                         }
                     } catch (error) {
                         console.error('Error releasing editing:', error);
-
                     }
                 });
             } else {
@@ -134,9 +138,8 @@
                 alert(errorMessage);
             } else {
                 alert("Log out");
-                window.location.href = `/api/user/login`;
+                window.location.href = `/users/login`;
             }
         }
     }
-
 </script>
